--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     }
 }
 
-@media only screen and (min-width:1000px)   { 
+@media only screen and (min-width:1000px) and (max-width: 1200px)   { 
 	.kitchenDiv {
         font-size: 25px;
         height: 13vh;
